--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,7 @@ googleapis-common-protos==1.72.0
 h11==0.16.0
 httplib2==0.31.0
 idna==3.11
+itsdangerous==2.2.0
 numpy==2.3.5
 oauthlib==3.3.1
 openpyxl==3.1.5
@@ -44,6 +45,3 @@ tzdata==2025.2
 uritemplate==4.2.0
 urllib3==2.5.0
 uvicorn==0.38.0
-itsdangerous
-pandas
-openpyxl
